CLAY-142: Upgrade to AVS Device SDK 1.23.0 and Smart Screen 2.6
Reason for chanage:
 - Upgrade to AVS Device SDK 1.23 and Smart Screen SDK 2.6
 - Upgrade to APL core 1.5
 - Add support for the latest AVS APIs in the thunder Plugin
 - Integrate AVS Voice chrome 2.4
 - Update the device configuration files
 - Modify audio and SDK state notification handlers to support latest SDK

Test Procedure: Build and verify smart screen on device
Risks: Low

Change-Id: I0db56c1fc900cb62a1eeea9152f7ee1b58ae2d0c

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -33,5 +33,5 @@ PREFERRED_PROVIDER_virtual/alexa-kwd-detector = "pryonlite"
 ##
 
 DISTRO_FEATURES_append = " alexa-plugin"
-#DISTRO_FEATURES_append = " alexa_smart_screen"
-#DISTRO_FEATURES_append = " voice-chrome"
+DISTRO_FEATURES_append = " alexa_smart_screen"
+DISTRO_FEATURES_append = " voice-chrome"
