CLAY-169: Update SmartScreenConfig to support audio for alexa response.
Reason for change: Fix to enable audio support for responses from alexa.

Test Procedure: Build and verify smart screen

Risks: Low
Change-Id: Ib322c589ee83c74a49fdfaffa3b828d221057409

--- a/recipes-wpe/wpeframework/wpeframework-plugins/SmartScreenSDKConfig-2.6.json
+++ b/recipes-wpe/wpeframework/wpeframework-plugins/SmartScreenSDKConfig-2.6.json
@@ -71,7 +71,7 @@
                                 "value": 130
                             },
                             "touch": "UNSUPPORTED",
-                            "keyboard": "SUPPORTED",
+                            "keyboard": "UNSUPPORTED",
                             "video": "SUPPORTED",
                             "dialog": "SUPPORTED"
                         },
@@ -83,9 +83,9 @@
                                 "value": 130
                             },
                             "touch": "UNSUPPORTED",
-                            "keyboard": "SUPPORTED",
-                            "video": "UNSUPPORTED",
-                            "dialog": "UNSUPPORTED"
+                            "keyboard": "UNSUPPORTED",
+                            "video": "SUPPORTED",
+                            "dialog": "SUPPORTED"
                         }
                     ]
                 }
