RDKDEV-314 HX44X-149 : Bring in Voice Support
Reason for change: Added task for applying patches and updated patch header field.
Test Procedure: Enable necessary configurations and build.
Risks: Low
Upstream-Status: Pending
Source: RDKM

Signed-off-by: Aswin M <Aswin_M@comcast.com>

RDKDEV-314 HX44X-149 : Bring in Voice Support

Reason for change: Rebased changes according to updated ControlManager and xr-speech-router components.
Test Procedure: Enable necessary configurations and build.
Risks: Low
Upstream-Status: Pending
Source: RDKM

Signed-off-by: Aswin M <Aswin_M@comcast.com>

RDKDEV-314 HX44X-149 : Bring in Voice Support

Reason for change: Removed custom-sssdk-oobe related changes.
Test Procedure: Enable necessary configurations and built control manager with AVS.
Risks: Low
Upstream-Status: Pending
Source: RDKM

Signed-off-by: Aswin M <Aswin_M@comcast.com>

HRDKDEV-314 X44X-149 : Bring in Voice Support

Reason for change: Removed SmartScreenControl.json file.
Test Procedure: Enable necessary configurations and built control manager with AVS.
Risks: Low
Upstream-Status: Pending
Source: RDKM

Signed-off-by: Aswin M <Aswin_M@comcast.com>

RDKDEV-314 HX44X-149 : Bring in Voice Support

Reason for change: Removed ctrlm_config.json file.
Test Procedure: Enable necessary configurations and built control manager with AVS.
Risks: Low
Upstream-Status: Pending
Source: RDKM

Signed-off-by: Aswin M <Aswin_M@comcast.com>

RDKDEV-314 HX44X-149 : Bring in Voice Support

Reason for change: Added support for the new control manager voice architecture.
Test Procedure: Enable necessary configurations and built control manager with AVS.
Risks: Low
Upstream-Status: Pending
Source: RDKM

Signed-off-by: Aswin M <Aswin_M@comcast.com>
Change-Id: I1c2e9c95372910a566c0a0f52dead36969e7d439

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,8 +12,11 @@ BBFILE_PRIORITY_rdk-voice = "7"
 # Additional license directories.
 #LICENSE_PATH += "${LAYERDIR}/licenses"
 
-DISTRO_FEATURES_append = " alexa_ffv"
+ALEXA_FFV_SUPPORT = "${@bb.utils.contains('DISTRO_FEATURES', 'enable-rdkv-bt-voice', 'false', 'true', d)}"
 
+DISTRO_FEATURES_append = "${@ ' alexa_ffv' if (d.getVar('ALEXA_FFV_SUPPORT',   expand=False) == "true") else ''}"
+
+require conf/include/rdk-bbmasks-voice.inc
 
 ##
 # To build AVS as plugin - Select wpe-alexa-lib as PREFERRED_PROVIDER & enable alexa-plugin DISTRO FEATURES
