RDKDEV-361 : Voice stack - Alexa device SDK 3.0 upgrade
Reason for change: Upgrade to Alexa device SDK 3.0.
Test Procedure: Enable necessary configurations and build.
Risks: Low
License: Inherited
Upstream-Status: Pending
Source: RDKM

Signed-off-by: Aswin M <Aswin_M@comcast.com>
Change-Id: Id45ff9067d3b51c12e248f08bbb3756e0d163b45

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -33,8 +33,10 @@ PREFERRED_PROVIDER_virtual/alexa-kwd-detector = "pryonlite"
 # alexa-plugin       : Builds the WPEPluginAVS component
 # alexa_smart_screen : Enables Smart screen SDK and related recipes
 # voice-chrome       : Adds Voice chrome support (User should get the necessary artifact)
+# alexa-sdk-3.0      : Builds AVS SDK 3.0 and related packages
 ##
 
 DISTRO_FEATURES_append = " alexa-plugin"
-DISTRO_FEATURES_append = " alexa_smart_screen"
+#DISTRO_FEATURES_append = " alexa_smart_screen"
 DISTRO_FEATURES_append = " voice-chrome"
+DISTRO_FEATURES_append = " alexa-sdk-3.0"
